# HighJax

./: .gitignore  AGENTS.md  AUTHORS  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: HighJax coding conventions.md  HighJax docs.md
docs/HighJax/: HighJax NPCs.md  HighJax actions and dynamics.md  HighJax docs.md  HighJax environment.md  HighJax observations.md  HighJax reward.md
docs/Octane/: Octane architecture.md  Octane behavior explorer.md  Octane configuration.md  Octane docs.md  Octane glossary.md  Octane graphics and rendering.md  Octane key bindings quick guide.md  Octane key bindings.md  Octane navigation and playback quick guide.md  Octane navigation and playback.md  Octane overview.md
docs/Trainer/: Trainer behaviors.md  Trainer docs.md  Trainer training.md
examples/: basic_usage.py  train_ppo.py  use_purejaxrl.py  use_rejax.py  use_stoix.py
highjax/: __init__.py  env.py  idm.py  kinematics.py  lanes.py  observations.py  stepper.py
highjax/behaviors/: __init__.py  collision.json
highjax_trainer/: __init__.py  ascending.py  ascent.py  attention_estimating.py  brain.py  cli.py  config.py  defaults.py  epoch_reporting.py  es_writer.py  estimating.py  evaluating.py  filtros.py  genesis.py  jax_utils.py  joint_ascent.py  lobe.py  objectives.py  optax_tools.py  parquet_writing.py  populating.py  rollout.py  stepping.py  training.py  trekking.py
highjax_trainer/ozette/: __init__.py  config.py  core.py  metadata.py  processing.py  wrappers.py
misc/IDE files/: highjax.wpr
octane/: Cargo.toml  build.rs
octane/examples/: benchmark.rs
octane/src/: cli.rs  config.rs  lib.rs  main.rs  ui.rs  util.rs
octane/src/app/: clipboard.rs  episode.rs  explorer.rs  explorer_editing.rs  input.rs  mod.rs  modal_behavior.rs  modal_graphics.rs  modal_jump.rs  navigation.rs  playback.rs  state.rs  tests.rs  trek.rs  zoltar.rs
octane/src/cli/: args.rs  commands.rs
octane/src/cli/commands/: animate.rs  draw.rs  zoltar.rs
octane/src/data/: behaviors.rs  episode.rs  es_parquet.rs  jsonla.rs  mod.rs  trek.rs
octane/src/envs/: highway.rs  mod.rs
octane/src/leona/: Cargo.toml
octane/src/leona/src/: config.rs  dedup.rs  lib.rs  paths.rs  pointers.rs  rotation.rs
octane/src/mango/: cli.rs  mod.rs  render.rs  svg.rs
octane/src/mango/templates/: character_tables.rs  masks.rs  mod.rs  mse.rs
octane/src/render/: action_distribution.rs  brakelights.rs  car_template.rs  color.rs  frame_render.rs  geometry.rs  headlights.rs  highway_svg.rs  mod.rs  npc_text.rs  terrain.rs  velocity_arrows.rs
octane/src/ui/: dashboard.rs  explorer.rs  modals.rs  panels.rs  styles.rs  widgets.rs
octane/src/worlds/: coords.rs  mod.rs  scene_episode.rs  svg_episode.rs  viewport_episode.rs
octane/src/zoltar/: file_ipc.rs  mod.rs  protocol.rs  socket.rs
octane/tests/: airbus_tests.rs  draw_tests.rs  svg_rendering_tests.rs  svg_structure_tests.rs  svg_transforms_tests.rs
octane/tests/common/: airbus.rs  mod.rs  svg.rs
scripts/: _wing_run.py
tests/: conftest.py
tests/test_highjax/: test_api_conformance.py  test_env.py  test_idm.py  test_kinematics.py  test_lanes.py  test_leader_follower.py  test_mobil.py  test_npc_npc_collisions.py  test_parity.py  test_predictive_collision.py  test_purejaxrl.py  test_tollroad_parity.py
(+12 files in other folders)
