[package]
name = "leona"
version = "0.1.0"
edition = "2021"
description = "Logging library for HighJax Rust applications (vendored from mussel)"
authors = ["Ram Rachum <ram@rachum.com>"]

[dependencies]
anyhow = "1"
chrono = "0.4"
dirs = "5"
hostname = "0.4"
serde_json = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
